cocogen/tests/fail/missing_action.ccn

start phase hello {
    actions {
        pass p;
        missing_action;
    }
};

root node ast2 {
    attributes {
        int val
    }
};
